force-app/main/default/objects/ffirule__IntegrationRuleMapping__c/ffirule__IntegrationRuleMapping__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffirule__helpintegrationrulemapping</customHelpPage>
    <label>ClickLink Mapping</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>