force-app/main/default/objects/ffirule__IntegrationRuleMapping__c/fields/ffirule__AllowNewRecordCreationOnLookup__c.field-meta.xml
<CustomField>
    <fullName>ffirule__AllowNewRecordCreationOnLookup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow New Record Creation on Lookup</label>
    <type>Checkbox</type>
</CustomField>