force-app/main/default/objects/ffirule__IntegrationRuleMapping__c/fields/ffirule__MappingLiteral__c.field-meta.xml
<CustomField>
    <fullName>ffirule__MappingLiteral__c</fullName>
    <label>Mapping Literal</label>
    <type>TextArea</type>
</CustomField>