force-app/main/default/objects/ffirule__IntegrationRuleMapping__c/fields/ffirule__MappingType__c.field-meta.xml
<CustomField>
    <fullName>ffirule__MappingType__c</fullName>
    <label>Mapping Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Source Field</fullName>
                <default>true</default>
                <label>Source Field</label>
            </value>
            <value>
                <fullName>Custom Setting</fullName>
            </value>
            <value>
                <fullName>Literal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>