force-app/main/default/objects/ffirule__IntegrationRuleMapping__c/fields/ffirule__SourceResolutionControlValueIsId__c.field-meta.xml
<CustomField>
    <fullName>ffirule__SourceResolutionControlValueIsId__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Source Resolution Control Value Is Id</label>
    <type>Checkbox</type>
</CustomField>