force-app/main/default/objects/ffirule__IntegrationRuleMapping__c/fields/ffirule__SourceSync__c.field-meta.xml
<CustomField>
    <fullName>ffirule__SourceSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Source Sync</label>
    <type>Checkbox</type>
</CustomField>